<resources>
    <string name="app_name">AppTrains</string>
    <string name="label_depart">Ville de départ </string>
    <string name="label_arrivee">Ville d\'arrivée </string>
    <string name="label_date"> Date de départ </string>
    <string name="label_heure"> Heure de départ </string>
    <string name="date_select"> Date : Non sélectionnée </string>
    <string name="heure_select"> Heure : Non sélectionnée </string>
    <string name="btn_rechercher">Rechercher</string>
    <string name="research">Rechercher</string>
    <string name="result_text">Itinéraires pour : %1$s ➝ %2$s\nDate : %3$s | Heure : %4$s</string>
    <string name="res_search">Résultats de recherche</string>
    <string name="time_act">Heure : </string>
    <string name="toast_alert">Veuillez remplir tous les champs</string>
    <string name="prix_adapt">Prix : </string>
    <string name="places_dispo">Places disponibles </string>
    <string name="complet">Complet </string>

    <!-- Pour le formulaire -->

    <string name="consigne">Veuillez remplir les informations ci-dessous :</string>
    <string name="label_nom">Entrez votre nom</string>
    <string name="label_prenom">Entrez votre prénom</string>
    <string name="label_age">Entrez votre âge</string>
    <string name="label_domain">Entrez votre domaine</string>
    <string name="label_tel">Entrez votre numéro de téléphone</string>
    <string name="nom">Nom :</string>
    <string name="prenom">Prénom :</string>
    <string name="age">Âge :</string>
    <string name="domain">Domaine de compétences :</string>
    <string name="tel">Numéro de téléphone :</string>
    <string name="submit">Valider et Payer</string>

    <string name="confirm_title">Confirmation</string>
    <string name="confirm_message">Voulez-vous vraiment valider ces informations ?</string>
    <string name="yes">Oui</string>
    <string name="cancel">Annuler</string>
    <string name="validation_success">Informations validées avec succès !</string>
    <string name="validation_error">Veuillez remplir tous les champs avant de valider.</string>


    <!-- Confirmation -->

    <string name="confirmation"> Réservation confirmée ! </string>
    <string name="mail"> Nous vous enverrons un SMS avec tous les informations concernant votre réserve et votre billet </string>
    <string name="rev_accueil"> Revenir à l\'accueil </string>


</resources>