<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="0dp">

    <ImageView
        android:layout_width="428dp"
        android:layout_height="189dp"
        android:layout_gravity="top"
        android:scaleType="centerCrop"

        android:src="@drawable/train_pay" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        style="@style/SubtitleTextStyle"
        android:layout_width="233dp"
        android:layout_height="wrap_content"
        android:text="@string/consigne"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="vertical">
    <TextView
        android:id="@+id/tvDetailHoraire"
        style="@style/DefaultTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:gravity="right"
        android:text="Horaire : "
        android:textSize="14sp"
        android:textStyle="bold"


        />

    <TextView
        android:id="@+id/tvDetailPrix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Prix : "
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_marginStart="10dp"
        style="@style/DefaultTextStyle"

        />
    </LinearLayout>

</LinearLayout>






    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text = "@string/nom"
        android:layout_marginLeft="12dp"
        />

    <EditText
        android:id="@+id/etNom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_nom"
        android:drawableLeft="@drawable/icone_user"
        android:drawablePadding="10dp"
        android:background="@drawable/champ_saisie"
        android:layout_margin="8dp"
        android:padding="15dp"
        android:backgroundTint="#30A5A2A2"
        android:textSize="16dp"
        android:textStyle="italic"


        />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prenom"
        android:layout_marginLeft="12dp"
        />

    <EditText
        android:id="@+id/etPrenom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_prenom"
        android:drawableLeft="@drawable/icone_user"

        android:drawablePadding="10dp"
        android:background="@drawable/champ_saisie"
        android:layout_margin="8dp"
        android:padding="15dp"
        android:backgroundTint="#30A5A2A2"
        android:textSize="16dp"
        android:textStyle="italic"


        />

    <!-- Label + Champ Âge -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:layout_marginLeft="12dp"
        />

    <EditText
        android:id="@+id/etAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/label_age"
        android:textSize="16dp"
        android:drawableLeft="@drawable/age"
        android:drawablePadding="10dp"
        android:background="@drawable/champ_saisie"
        android:layout_margin="8dp"
        android:padding="15dp"
        android:backgroundTint="#30A5A2A2"
        android:textStyle="italic"

        />



    <!-- Label + Champ Numéro de téléphone -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tel"
        android:layout_marginLeft="12dp"
        />

    <EditText
        android:id="@+id/etTelephone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:hint="@string/label_tel"
        android:drawablePadding="10dp"
        android:background="@drawable/champ_saisie"
        android:layout_margin="8dp"
        android:padding="15dp"
        android:drawableLeft="@drawable/phone"
        android:backgroundTint="#30A5A2A2"
        android:textSize="16dp"
        android:textStyle="italic"

        />

    <!-- Bouton Valider -->
    <ImageView
        android:layout_width="263dp"
        android:layout_height="34dp"
        android:src="@drawable/logos_payment"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="1dp"/>

    <Button
        android:id="@+id/btnValider"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_margin="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_round"
        android:backgroundTint="#F1766D"
        android:padding="1dp"
        android:text="@string/submit"
        android:textColor="@color/white"
        />

</LinearLayout>
